Lambda/_build/parser.output
   0  $accept : %entry% $end

   1  topLevel : letBinding topLevel
   2           | typeAnn letBinding topLevel
   3           | letBinding
   4           | typeAnn letBinding

   5  letBinding : LET REC binding
   6             | LET REC binding WHERE wheres
   7             | LET binding
   8             | LET binding WHERE wheres

   9  wheres : binding AND wheres
  10         | binding

  11  binding : VARIABLE EQUALS expr
  12          | VARIABLE binding
  13          | LPAREN VARIABLE COMMA multVars RPAREN EQUALS expr
  14          | LPAREN VARIABLE DCOLON consVars RPAREN EQUALS expr

  15  typeAnn : VAL VARIABLE COLON monoType

  16  monoType : TYPE
  17           | UNIT
  18           | LIST monoType
  19           | TYPEVAR
  20           | LPAREN monoType RPAREN
  21           | monoType ARROW monoType

  22  expr : call
  23       | expr COLON monoType
  24       | LAMBDA lambda
  25       | letBinding IN expr
  26       | expr PLUS expr
  27       | expr MINUS expr
  28       | expr TIMES expr
  29       | expr DIV expr
  30       | expr MOD expr
  31       | expr FPLUS expr
  32       | expr FMINUS expr
  33       | expr FTIMES expr
  34       | expr FDIV expr
  35       | expr FMOD expr
  36       | expr BAND expr
  37       | expr BOR expr
  38       | expr DCOLON expr
  39       | expr DOUBLEEQUALS expr
  40       | expr LT expr
  41       | expr LTE expr
  42       | expr GT expr
  43       | expr GTE expr
  44       | BNOT expr
  45       | IF expr THEN expr ELSE expr
  46       | MATCH expr WITH patternMatrix SEMICOLON
  47       | PRINT expr
  48       | ORD expr
  49       | CHR expr
  50       | SITOFP expr
  51       | FPTOSI expr

  52  multVars : VARIABLE COMMA multVars
  53           | VARIABLE

  54  consVars : VARIABLE DCOLON consVars
  55           | VARIABLE

  56  lst :
  57      | expr
  58      | expr COMMA lst

  59  patternMatrix : GUARD expr DARROW expr
  60                | GUARD OTHERWISE DARROW expr
  61                | GUARD expr DARROW expr patternMatrix

  62  lambda : VARIABLE ARROW expr
  63         | VARIABLE lambda

  64  call : arg
  65       | call arg

  66  arg : LITERAL
  67      | CLITERAL
  68      | FLITERAL
  69      | TRUE
  70      | FALSE
  71      | VARIABLE
  72      | UNIT
  73      | LPAREN expr RPAREN
  74      | LBRACKET lst RBRACKET
  75      | GUARDDOT expr DOTGUARD

  76  %entry% : '\001' topLevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . topLevel  (76)

	LET  shift 3
	VAL  shift 4
	.  error

	topLevel  goto 5
	letBinding  goto 6
	typeAnn  goto 7


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	letBinding : LET . REC binding  (5)
	letBinding : LET . REC binding WHERE wheres  (6)
	letBinding : LET . binding  (7)
	letBinding : LET . binding WHERE wheres  (8)

	LPAREN  shift 8
	REC  shift 9
	VARIABLE  shift 10
	.  error

	binding  goto 11


state 4
	typeAnn : VAL . VARIABLE COLON monoType  (15)

	VARIABLE  shift 12
	.  error


state 5
	%entry% : '\001' topLevel .  (76)

	.  reduce 76


state 6
	topLevel : letBinding . topLevel  (1)
	topLevel : letBinding .  (3)

	LET  shift 3
	VAL  shift 4
	$end  reduce 3

	topLevel  goto 13
	letBinding  goto 6
	typeAnn  goto 7


state 7
	topLevel : typeAnn . letBinding topLevel  (2)
	topLevel : typeAnn . letBinding  (4)

	LET  shift 3
	.  error

	letBinding  goto 14


state 8
	binding : LPAREN . VARIABLE COMMA multVars RPAREN EQUALS expr  (13)
	binding : LPAREN . VARIABLE DCOLON consVars RPAREN EQUALS expr  (14)

	VARIABLE  shift 15
	.  error


state 9
	letBinding : LET REC . binding  (5)
	letBinding : LET REC . binding WHERE wheres  (6)

	LPAREN  shift 8
	VARIABLE  shift 10
	.  error

	binding  goto 16


state 10
	binding : VARIABLE . EQUALS expr  (11)
	binding : VARIABLE . binding  (12)

	LPAREN  shift 8
	EQUALS  shift 17
	VARIABLE  shift 10
	.  error

	binding  goto 18


state 11
	letBinding : LET binding .  (7)
	letBinding : LET binding . WHERE wheres  (8)

	WHERE  shift 19
	$end  reduce 7
	LET  reduce 7
	IN  reduce 7
	VAL  reduce 7


state 12
	typeAnn : VAL VARIABLE . COLON monoType  (15)

	COLON  shift 20
	.  error


state 13
	topLevel : letBinding topLevel .  (1)

	.  reduce 1


state 14
	topLevel : typeAnn letBinding . topLevel  (2)
	topLevel : typeAnn letBinding .  (4)

	LET  shift 3
	VAL  shift 4
	$end  reduce 4

	topLevel  goto 21
	letBinding  goto 6
	typeAnn  goto 7


state 15
	binding : LPAREN VARIABLE . COMMA multVars RPAREN EQUALS expr  (13)
	binding : LPAREN VARIABLE . DCOLON consVars RPAREN EQUALS expr  (14)

	COMMA  shift 22
	DCOLON  shift 23
	.  error


state 16
	letBinding : LET REC binding .  (5)
	letBinding : LET REC binding . WHERE wheres  (6)

	WHERE  shift 24
	$end  reduce 5
	LET  reduce 5
	IN  reduce 5
	VAL  reduce 5


state 17
	binding : VARIABLE EQUALS . expr  (11)

	MATCH  shift 25
	LPAREN  shift 26
	LBRACKET  shift 27
	GUARDDOT  shift 28
	LAMBDA  shift 29
	LET  shift 3
	IF  shift 30
	TRUE  shift 31
	FALSE  shift 32
	PRINT  shift 33
	ORD  shift 34
	CHR  shift 35
	FPTOSI  shift 36
	SITOFP  shift 37
	BNOT  shift 38
	UNIT  shift 39
	LITERAL  shift 40
	CLITERAL  shift 41
	FLITERAL  shift 42
	VARIABLE  shift 43
	.  error

	letBinding  goto 44
	expr  goto 45
	call  goto 46
	arg  goto 47


state 18
	binding : VARIABLE binding .  (12)

	.  reduce 12


state 19
	letBinding : LET binding WHERE . wheres  (8)

	LPAREN  shift 8
	VARIABLE  shift 10
	.  error

	wheres  goto 48
	binding  goto 49


state 20
	typeAnn : VAL VARIABLE COLON . monoType  (15)

	LPAREN  shift 50
	UNIT  shift 51
	LIST  shift 52
	TYPE  shift 53
	TYPEVAR  shift 54
	.  error

	monoType  goto 55


state 21
	topLevel : typeAnn letBinding topLevel .  (2)

	.  reduce 2


state 22
	binding : LPAREN VARIABLE COMMA . multVars RPAREN EQUALS expr  (13)

	VARIABLE  shift 56
	.  error

	multVars  goto 57


state 23
	binding : LPAREN VARIABLE DCOLON . consVars RPAREN EQUALS expr  (14)

	VARIABLE  shift 58
	.  error

	consVars  goto 59


state 24
	letBinding : LET REC binding WHERE . wheres  (6)

	LPAREN  shift 8
	VARIABLE  shift 10
	.  error

	wheres  goto 60
	binding  goto 49


state 25
	expr : MATCH . expr WITH patternMatrix SEMICOLON  (46)

	MATCH  shift 25
	LPAREN  shift 26
	LBRACKET  shift 27
	GUARDDOT  shift 28
	LAMBDA  shift 29
	LET  shift 3
	IF  shift 30
	TRUE  shift 31
	FALSE  shift 32
	PRINT  shift 33
	ORD  shift 34
	CHR  shift 35
	FPTOSI  shift 36
	SITOFP  shift 37
	BNOT  shift 38
	UNIT  shift 39
	LITERAL  shift 40
	CLITERAL  shift 41
	FLITERAL  shift 42
	VARIABLE  shift 43
	.  error

	letBinding  goto 44
	expr  goto 61
	call  goto 46
	arg  goto 47


state 26
	arg : LPAREN . expr RPAREN  (73)

	MATCH  shift 25
	LPAREN  shift 26
	LBRACKET  shift 27
	GUARDDOT  shift 28
	LAMBDA  shift 29
	LET  shift 3
	IF  shift 30
	TRUE  shift 31
	FALSE  shift 32
	PRINT  shift 33
	ORD  shift 34
	CHR  shift 35
	FPTOSI  shift 36
	SITOFP  shift 37
	BNOT  shift 38
	UNIT  shift 39
	LITERAL  shift 40
	CLITERAL  shift 41
	FLITERAL  shift 42
	VARIABLE  shift 43
	.  error

	letBinding  goto 44
	expr  goto 62
	call  goto 46
	arg  goto 47


state 27
	arg : LBRACKET . lst RBRACKET  (74)
	lst : .  (56)

	MATCH  shift 25
	LPAREN  shift 26
	LBRACKET  shift 27
	GUARDDOT  shift 28
	LAMBDA  shift 29
	LET  shift 3
	IF  shift 30
	TRUE  shift 31
	FALSE  shift 32
	PRINT  shift 33
	ORD  shift 34
	CHR  shift 35
	FPTOSI  shift 36
	SITOFP  shift 37
	BNOT  shift 38
	UNIT  shift 39
	LITERAL  shift 40
	CLITERAL  shift 41
	FLITERAL  shift 42
	VARIABLE  shift 43
	RBRACKET  reduce 56

	letBinding  goto 44
	expr  goto 63
	call  goto 46
	arg  goto 47
	lst  goto 64


state 28
	arg : GUARDDOT . expr DOTGUARD  (75)

	MATCH  shift 25
	LPAREN  shift 26
	LBRACKET  shift 27
	GUARDDOT  shift 28
	LAMBDA  shift 29
	LET  shift 3
	IF  shift 30
	TRUE  shift 31
	FALSE  shift 32
	PRINT  shift 33
	ORD  shift 34
	CHR  shift 35
	FPTOSI  shift 36
	SITOFP  shift 37
	BNOT  shift 38
	UNIT  shift 39
	LITERAL  shift 40
	CLITERAL  shift 41
	FLITERAL  shift 42
	VARIABLE  shift 43
	.  error

	letBinding  goto 44
	expr  goto 65
	call  goto 46
	arg  goto 47


state 29
	expr : LAMBDA . lambda  (24)

	VARIABLE  shift 66
	.  error

	lambda  goto 67


state 30
	expr : IF . expr THEN expr ELSE expr  (45)

	MATCH  shift 25
	LPAREN  shift 26
	LBRACKET  shift 27
	GUARDDOT  shift 28
	LAMBDA  shift 29
	LET  shift 3
	IF  shift 30
	TRUE  shift 31
	FALSE  shift 32
	PRINT  shift 33
	ORD  shift 34
	CHR  shift 35
	FPTOSI  shift 36
	SITOFP  shift 37
	BNOT  shift 38
	UNIT  shift 39
	LITERAL  shift 40
	CLITERAL  shift 41
	FLITERAL  shift 42
	VARIABLE  shift 43
	.  error

	letBinding  goto 44
	expr  goto 68
	call  goto 46
	arg  goto 47


state 31
	arg : TRUE .  (69)

	.  reduce 69


state 32
	arg : FALSE .  (70)

	.  reduce 70


state 33
	expr : PRINT . expr  (47)

	MATCH  shift 25
	LPAREN  shift 26
	LBRACKET  shift 27
	GUARDDOT  shift 28
	LAMBDA  shift 29
	LET  shift 3
	IF  shift 30
	TRUE  shift 31
	FALSE  shift 32
	PRINT  shift 33
	ORD  shift 34
	CHR  shift 35
	FPTOSI  shift 36
	SITOFP  shift 37
	BNOT  shift 38
	UNIT  shift 39
	LITERAL  shift 40
	CLITERAL  shift 41
	FLITERAL  shift 42
	VARIABLE  shift 43
	.  error

	letBinding  goto 44
	expr  goto 69
	call  goto 46
	arg  goto 47


state 34
	expr : ORD . expr  (48)

	MATCH  shift 25
	LPAREN  shift 26
	LBRACKET  shift 27
	GUARDDOT  shift 28
	LAMBDA  shift 29
	LET  shift 3
	IF  shift 30
	TRUE  shift 31
	FALSE  shift 32
	PRINT  shift 33
	ORD  shift 34
	CHR  shift 35
	FPTOSI  shift 36
	SITOFP  shift 37
	BNOT  shift 38
	UNIT  shift 39
	LITERAL  shift 40
	CLITERAL  shift 41
	FLITERAL  shift 42
	VARIABLE  shift 43
	.  error

	letBinding  goto 44
	expr  goto 70
	call  goto 46
	arg  goto 47


state 35
	expr : CHR . expr  (49)

	MATCH  shift 25
	LPAREN  shift 26
	LBRACKET  shift 27
	GUARDDOT  shift 28
	LAMBDA  shift 29
	LET  shift 3
	IF  shift 30
	TRUE  shift 31
	FALSE  shift 32
	PRINT  shift 33
	ORD  shift 34
	CHR  shift 35
	FPTOSI  shift 36
	SITOFP  shift 37
	BNOT  shift 38
	UNIT  shift 39
	LITERAL  shift 40
	CLITERAL  shift 41
	FLITERAL  shift 42
	VARIABLE  shift 43
	.  error

	letBinding  goto 44
	expr  goto 71
	call  goto 46
	arg  goto 47


state 36
	expr : FPTOSI . expr  (51)

	MATCH  shift 25
	LPAREN  shift 26
	LBRACKET  shift 27
	GUARDDOT  shift 28
	LAMBDA  shift 29
	LET  shift 3
	IF  shift 30
	TRUE  shift 31
	FALSE  shift 32
	PRINT  shift 33
	ORD  shift 34
	CHR  shift 35
	FPTOSI  shift 36
	SITOFP  shift 37
	BNOT  shift 38
	UNIT  shift 39
	LITERAL  shift 40
	CLITERAL  shift 41
	FLITERAL  shift 42
	VARIABLE  shift 43
	.  error

	letBinding  goto 44
	expr  goto 72
	call  goto 46
	arg  goto 47


state 37
	expr : SITOFP . expr  (50)

	MATCH  shift 25
	LPAREN  shift 26
	LBRACKET  shift 27
	GUARDDOT  shift 28
	LAMBDA  shift 29
	LET  shift 3
	IF  shift 30
	TRUE  shift 31
	FALSE  shift 32
	PRINT  shift 33
	ORD  shift 34
	CHR  shift 35
	FPTOSI  shift 36
	SITOFP  shift 37
	BNOT  shift 38
	UNIT  shift 39
	LITERAL  shift 40
	CLITERAL  shift 41
	FLITERAL  shift 42
	VARIABLE  shift 43
	.  error

	letBinding  goto 44
	expr  goto 73
	call  goto 46
	arg  goto 47


state 38
	expr : BNOT . expr  (44)

	MATCH  shift 25
	LPAREN  shift 26
	LBRACKET  shift 27
	GUARDDOT  shift 28
	LAMBDA  shift 29
	LET  shift 3
	IF  shift 30
	TRUE  shift 31
	FALSE  shift 32
	PRINT  shift 33
	ORD  shift 34
	CHR  shift 35
	FPTOSI  shift 36
	SITOFP  shift 37
	BNOT  shift 38
	UNIT  shift 39
	LITERAL  shift 40
	CLITERAL  shift 41
	FLITERAL  shift 42
	VARIABLE  shift 43
	.  error

	letBinding  goto 44
	expr  goto 74
	call  goto 46
	arg  goto 47


state 39
	arg : UNIT .  (72)

	.  reduce 72


state 40
	arg : LITERAL .  (66)

	.  reduce 66


state 41
	arg : CLITERAL .  (67)

	.  reduce 67


state 42
	arg : FLITERAL .  (68)

	.  reduce 68


state 43
	arg : VARIABLE .  (71)

	.  reduce 71


state 44
	expr : letBinding . IN expr  (25)

	IN  shift 75
	.  error


state 45
	binding : VARIABLE EQUALS expr .  (11)
	expr : expr . COLON monoType  (23)
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIV expr  (29)
	expr : expr . MOD expr  (30)
	expr : expr . FPLUS expr  (31)
	expr : expr . FMINUS expr  (32)
	expr : expr . FTIMES expr  (33)
	expr : expr . FDIV expr  (34)
	expr : expr . FMOD expr  (35)
	expr : expr . BAND expr  (36)
	expr : expr . BOR expr  (37)
	expr : expr . DCOLON expr  (38)
	expr : expr . DOUBLEEQUALS expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LTE expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GTE expr  (43)

	PLUS  shift 76
	MINUS  shift 77
	TIMES  shift 78
	DIV  shift 79
	MOD  shift 80
	FPLUS  shift 81
	FMINUS  shift 82
	FDIV  shift 83
	FTIMES  shift 84
	FMOD  shift 85
	COLON  shift 86
	DCOLON  shift 87
	BAND  shift 88
	BOR  shift 89
	DOUBLEEQUALS  shift 90
	LT  shift 91
	LTE  shift 92
	GT  shift 93
	GTE  shift 94
	$end  reduce 11
	LET  reduce 11
	WHERE  reduce 11
	AND  reduce 11
	IN  reduce 11
	VAL  reduce 11


state 46
	expr : call .  (22)
	call : call . arg  (65)

	LPAREN  shift 26
	LBRACKET  shift 27
	GUARDDOT  shift 28
	TRUE  shift 31
	FALSE  shift 32
	UNIT  shift 39
	LITERAL  shift 40
	CLITERAL  shift 41
	FLITERAL  shift 42
	VARIABLE  shift 43
	$end  reduce 22
	WITH  reduce 22
	GUARD  reduce 22
	SEMICOLON  reduce 22
	RPAREN  reduce 22
	RBRACKET  reduce 22
	COMMA  reduce 22
	DOTGUARD  reduce 22
	DARROW  reduce 22
	PLUS  reduce 22
	MINUS  reduce 22
	TIMES  reduce 22
	DIV  reduce 22
	MOD  reduce 22
	FPLUS  reduce 22
	FMINUS  reduce 22
	FDIV  reduce 22
	FTIMES  reduce 22
	FMOD  reduce 22
	LET  reduce 22
	WHERE  reduce 22
	AND  reduce 22
	IN  reduce 22
	THEN  reduce 22
	ELSE  reduce 22
	VAL  reduce 22
	COLON  reduce 22
	DCOLON  reduce 22
	BAND  reduce 22
	BOR  reduce 22
	DOUBLEEQUALS  reduce 22
	LT  reduce 22
	LTE  reduce 22
	GT  reduce 22
	GTE  reduce 22

	arg  goto 95


state 47
	call : arg .  (64)

	.  reduce 64


state 48
	letBinding : LET binding WHERE wheres .  (8)

	.  reduce 8


state 49
	wheres : binding . AND wheres  (9)
	wheres : binding .  (10)

	AND  shift 96
	$end  reduce 10
	LET  reduce 10
	IN  reduce 10
	VAL  reduce 10


state 50
	monoType : LPAREN . monoType RPAREN  (20)

	LPAREN  shift 50
	UNIT  shift 51
	LIST  shift 52
	TYPE  shift 53
	TYPEVAR  shift 54
	.  error

	monoType  goto 97


state 51
	monoType : UNIT .  (17)

	.  reduce 17


state 52
	monoType : LIST . monoType  (18)

	LPAREN  shift 50
	UNIT  shift 51
	LIST  shift 52
	TYPE  shift 53
	TYPEVAR  shift 54
	.  error

	monoType  goto 98


state 53
	monoType : TYPE .  (16)

	.  reduce 16


state 54
	monoType : TYPEVAR .  (19)

	.  reduce 19


state 55
	typeAnn : VAL VARIABLE COLON monoType .  (15)
	monoType : monoType . ARROW monoType  (21)

	ARROW  shift 99
	LET  reduce 15


state 56
	multVars : VARIABLE . COMMA multVars  (52)
	multVars : VARIABLE .  (53)

	COMMA  shift 100
	RPAREN  reduce 53


state 57
	binding : LPAREN VARIABLE COMMA multVars . RPAREN EQUALS expr  (13)

	RPAREN  shift 101
	.  error


state 58
	consVars : VARIABLE . DCOLON consVars  (54)
	consVars : VARIABLE .  (55)

	DCOLON  shift 102
	RPAREN  reduce 55


state 59
	binding : LPAREN VARIABLE DCOLON consVars . RPAREN EQUALS expr  (14)

	RPAREN  shift 103
	.  error


state 60
	letBinding : LET REC binding WHERE wheres .  (6)

	.  reduce 6


state 61
	expr : expr . COLON monoType  (23)
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIV expr  (29)
	expr : expr . MOD expr  (30)
	expr : expr . FPLUS expr  (31)
	expr : expr . FMINUS expr  (32)
	expr : expr . FTIMES expr  (33)
	expr : expr . FDIV expr  (34)
	expr : expr . FMOD expr  (35)
	expr : expr . BAND expr  (36)
	expr : expr . BOR expr  (37)
	expr : expr . DCOLON expr  (38)
	expr : expr . DOUBLEEQUALS expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LTE expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GTE expr  (43)
	expr : MATCH expr . WITH patternMatrix SEMICOLON  (46)

	WITH  shift 104
	PLUS  shift 76
	MINUS  shift 77
	TIMES  shift 78
	DIV  shift 79
	MOD  shift 80
	FPLUS  shift 81
	FMINUS  shift 82
	FDIV  shift 83
	FTIMES  shift 84
	FMOD  shift 85
	COLON  shift 86
	DCOLON  shift 87
	BAND  shift 88
	BOR  shift 89
	DOUBLEEQUALS  shift 90
	LT  shift 91
	LTE  shift 92
	GT  shift 93
	GTE  shift 94
	.  error


state 62
	expr : expr . COLON monoType  (23)
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIV expr  (29)
	expr : expr . MOD expr  (30)
	expr : expr . FPLUS expr  (31)
	expr : expr . FMINUS expr  (32)
	expr : expr . FTIMES expr  (33)
	expr : expr . FDIV expr  (34)
	expr : expr . FMOD expr  (35)
	expr : expr . BAND expr  (36)
	expr : expr . BOR expr  (37)
	expr : expr . DCOLON expr  (38)
	expr : expr . DOUBLEEQUALS expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LTE expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GTE expr  (43)
	arg : LPAREN expr . RPAREN  (73)

	RPAREN  shift 105
	PLUS  shift 76
	MINUS  shift 77
	TIMES  shift 78
	DIV  shift 79
	MOD  shift 80
	FPLUS  shift 81
	FMINUS  shift 82
	FDIV  shift 83
	FTIMES  shift 84
	FMOD  shift 85
	COLON  shift 86
	DCOLON  shift 87
	BAND  shift 88
	BOR  shift 89
	DOUBLEEQUALS  shift 90
	LT  shift 91
	LTE  shift 92
	GT  shift 93
	GTE  shift 94
	.  error


state 63
	expr : expr . COLON monoType  (23)
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIV expr  (29)
	expr : expr . MOD expr  (30)
	expr : expr . FPLUS expr  (31)
	expr : expr . FMINUS expr  (32)
	expr : expr . FTIMES expr  (33)
	expr : expr . FDIV expr  (34)
	expr : expr . FMOD expr  (35)
	expr : expr . BAND expr  (36)
	expr : expr . BOR expr  (37)
	expr : expr . DCOLON expr  (38)
	expr : expr . DOUBLEEQUALS expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LTE expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GTE expr  (43)
	lst : expr .  (57)
	lst : expr . COMMA lst  (58)

	COMMA  shift 106
	PLUS  shift 76
	MINUS  shift 77
	TIMES  shift 78
	DIV  shift 79
	MOD  shift 80
	FPLUS  shift 81
	FMINUS  shift 82
	FDIV  shift 83
	FTIMES  shift 84
	FMOD  shift 85
	COLON  shift 86
	DCOLON  shift 87
	BAND  shift 88
	BOR  shift 89
	DOUBLEEQUALS  shift 90
	LT  shift 91
	LTE  shift 92
	GT  shift 93
	GTE  shift 94
	RBRACKET  reduce 57


state 64
	arg : LBRACKET lst . RBRACKET  (74)

	RBRACKET  shift 107
	.  error

